# stencil

./: .editorconfig  .gitignore  .mdformat.toml  LICENSE  README.md  mise.toml  prek.toml  pyproject.toml
.claude/hooks/: session-start.sh
.claude/skills/add-fastapi/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  prek-autoupdate.yml
scripts/: cloud-setup.sh
tests/: test_smoke.py
