[project]
name = "example-python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Leslie", email = "contactjamesleslie@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "core"
