[project]
name = "example-python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Leslie", email = "contactjamesleslie@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "core"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
# https://docs.astral.sh/uv/reference/settings/
# use mise to manage Python
python-preference = "only-system"
python-downloads = "never"
